--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "devDependencies": {
     "eslint": "^4.3.0",
-    "mocha": "^3.1.2",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-plugin-compat": "^1.0.3",
-    "eslint-plugin-import": "^2.7.0"
+    "eslint-plugin-import": "^2.7.0",
+    "mocha": "^3.5.0"
   },
   "engines": {
     "node": ">= 6.11.1"
