--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   "author": "Mariana Tek",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests --recursive"
+    "lint": "./node_modules/.bin/eslint . --ext .js",
+    "test": "yarn lint && mocha tests --recursive"
   },
   "dependencies": {
     "requireindex": "~1.1.0"
   },
   "devDependencies": {
-    "eslint": "~3.9.1",
-    "mocha": "^3.1.2"
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-compat": "^1.0.3",
+    "eslint-plugin-import": "^2.7.0",
+    "mocha": "^3.5.0"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">= 6.11.1"
   },
   "license": "ISC"
 }
